--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-Keyboard definition based on the programmer dvorak (dvp) layout. To install it
-edit the `/usr/share/X11/xkb/symbols/us` file and add the definition.
+This keyboard definition is based on the programmer dvorak (dvp) and dvorak-alt-intl layouts. To install it, edit the
+`/usr/share/X11/xkb/symbols/us` file and add the definition.
